[project]
name = "rah-example-randomizer"
version = "0.1.0"
description = "An example rah handler that assigns a random value to a REDCap field"
readme = "README.md"
authors = [
    { name = "Nate Vack", email = "njvack@wisc.edu" }
]
requires-python = ">=3.14"
dependencies = [
    "redcap-alert-handler",
    "httpx>=0.28.1",
]

[project.entry-points."rah.handlers"]
randomize = "rah_example_randomizer.handler:randomize"

[tool.uv.sources]
redcap-alert-handler = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"
